--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Stars-and-atoms_73362
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73362-h/images/cover.jpg
 creator:
   author:
     agent_name: Eddington, Arthur Stanley, Sir
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/34163
     wikipedia: https://en.wikipedia.org/wiki/Arthur_Eddington
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73362#Stars-and-atoms
 gutenberg_issued: '2024-04-08'
 gutenberg_type: Text
 identifiers:
